testsuite/bsc.interra/messages/EKindArg/EKindArg.bs.bsc-out.expected
checking package dependencies
compiling EKindArg.bs
Error: "EKindArg.bs", line 21, column 19: (T0028)
  Wrong number of arguments to class: Add
